clusters/playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda
  namespace: cortex-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
        - name: camunda
          image: operaton/operaton:latest
          ports:
            - containerPort: 8080
          args:
            - /bin/sh
            - -c
            - |
              export DB_URL="jdbc:mysql://${DB_HOST}:3306/cortex_test?autoReconnect=true&sessionVariables=transaction_isolation='READ-COMMITTED'"
              echo "🔧 Using DB_URL=${DB_URL}"
              exec ./operaton.sh
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
