clusters/playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex-svc
  namespace: cortex-test
spec:
  selector:
    app: cortex
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
